--- a/package.json
+++ b/package.json
@@ -5,7 +5,25 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/compiler-cli": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/platform-server": "^4.2.3",
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "meteor-node-stubs": "~0.2.4",
+    "meteor-rxjs": "^0.4.7",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.1",
+    "zone.js": "^0.8.12"
+  },
+  "devDependencies": {
+    "@types/meteor-accounts-phone": "0.0.5",
+    "@types/underscore": "^1.8.1",
+    "meteor-typings": "^1.3.1"
   }
 }
