--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@angular/platform-browser": "^4.2.3",
     "@angular/platform-browser-dynamic": "^4.2.3",
     "@angular/platform-server": "^4.2.3",
+    "@ionic/storage": "^2.0.1",
     "babel-runtime": "^6.20.0",
+    "ionic-native": "^2.9.0",
+    "ionicons": "^3.0.0",
     "meteor-node-stubs": "~0.2.4",
     "meteor-rxjs": "^0.4.7",
     "reflect-metadata": "^0.1.10",
