--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/platform-browser-dynamic": "^4.2.3",
     "@angular/platform-server": "^4.2.3",
     "@ionic/storage": "^2.0.1",
+    "angular2-moment": "^1.4.0",
     "babel-runtime": "^6.20.0",
+    "ionic-angular": "^3.4.2",
     "ionic-native": "^2.9.0",
     "ionicons": "^3.0.0",
     "meteor-node-stubs": "~0.2.4",
     "meteor-rxjs": "^0.4.7",
+    "moment": "^2.18.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.12"
