Added views for messages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2015"
-    ],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
     "target": "es5",
-    "skipLibCheck": true,
-    "stripInternal": true,
+    "module": "commonjs",
+    "isolatedModules": false,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "removeComments": false,
     "noImplicitAny": false,
-    "types": [
-      "meteor-typings",
-      "@types/underscore"
-    ]
+    "sourceMap": true
   },
-  "include": [
-    "client/**/*.ts",
-    "server/**/*.ts",
-    "imports/**/*.ts"
-  ],
   "exclude": [
     "node_modules"
   ],
-  "compileOnSave": false,
-  "atom": {
-    "rewriteTsconfig": false
-  }
+  "compileOnSave": false
 }
