--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "messaging",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run --settings private/settings.json"
   },
   "dependencies": {
     "@angular/common": "^4.2.3",
@@ -15,8 +15,10 @@
     "@angular/platform-browser-dynamic": "^4.2.3",
     "@angular/platform-server": "^4.2.3",
     "@ionic/storage": "^2.0.1",
+    "@types/meteor-accounts-phone": "0.0.5",
     "angular2-moment": "^1.4.0",
     "babel-runtime": "^6.20.0",
+    "dev": "^0.1.3",
     "ionic-angular": "^3.4.2",
     "ionic-native": "^2.9.0",
     "ionicons": "^3.0.0",
