--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "emitDecoratorMetadata": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "sourceMap": true
+    "sourceMap": true,
   },
   "exclude": [
     "node_modules"
