--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-server": "^4.2.3",
     "@ionic/storage": "^2.0.1",
     "@types/meteor-accounts-phone": "0.0.5",
+    "@types/meteor-publish-composite": "0.0.32",
+    "angular2-google-maps": "^0.17.0",
     "angular2-moment": "^1.4.0",
     "babel-runtime": "^6.20.0",
     "dev": "^0.1.3",
