--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/meteor-accounts-phone": "0.0.5",
+    "@types/meteor-collection-hooks": "^0.8.1",
     "@types/underscore": "^1.8.1",
     "meteor-typings": "^1.3.1",
     "typescript": "^2.3.4"
